mysqldb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb-deployment
  namespace: customer-namespace
  labels:
    app: mysqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
      - name: mysqldb
        image: mysql:8.0.27
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysqlc1
spec:
  selector:
    app: mysqldb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
