webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: customer-namespace
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: florescua/16-customer-demo-app:0.1
        ports:
        - containerPort: 8080     
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: customer-namespace
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
