webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: webapp.com
    http:
      paths:
        - path: /
          pathType: Prefix 
          backend:
            service:
              name: webapp-service
              port:
                number: 8080
